assets/css/main.css
html, body {
  color: #fafafa!important;
  font-family: 'Roboto', cursive!important;
}

html {
  background: url("https://w.wallhaven.cc/full/73/wallhaven-73w51y.jpg") no-repeat center center fixed!important;
  background-size: cover;
}

#page {
  min-height: 95vh;
}

body#landing {
  background-color: rgba(0, 0, 0, 0.815)!important;
}

body#about, body#page {
  background-color: rgba(0, 0, 0, 0.911)!important;
}

.flex-1 {
  flex: 1;
}
.navbar-toggler {
  z-index: 999;
}
.nav-item {
  margin-right: 35px;
  text-transform: uppercase;
}

.nav-item a:hover, a:hover {
  opacity: 0.5;
  transition: opacity 0.5s ease-in-out;
}
.nav-item a, a {
  opacity: 1;
  transition: opacity 0.5s ease-in-out;
}

.nav-item, .navbar-toggler {
  color: #fafafa;
}

.navbar-toggler:hover {
  opacity: 1;
}

a {
  text-decoration: none!important;
  color: #fafafa!important;
}

.single-headline,
.is-hidden,
.is-visible {
  display: inline-block;
}

.single-headline {
  position: relative;
  text-align: left;
  vertical-align: top;
  border-right: #000;
  font-family: 'Mako', cursive!important;
  font-size: 2rem;
  user-select: none;
}

.home-name {
  font-family: 'Comforter', cursive;
  font-size: 7rem;
  user-select: none;
}

.is-hidden {
  display: none;
}

.is-visible {
  display: inline-block;
  white-space: nowrap;
}

#page {
  padding-top: 70px;
}

.page-heading {
  text-align: center;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 4rem;
}

.mobile-only {
  display: none;
}

@media (max-width: 992px) {
  .mobile-only {
    display: inherit;
  }
  .navbar-collapse.show {
    background-color: rgba(15, 15, 15, 0.95);
    padding: 50px 50px 25px;
    width: 100%;
    position: fixed;
    top: -200px;
    left: 0;
  }
  .home-name {
    font-size: 4rem;
  }
  .single-headline {
    font-size: 1rem;
  }
}

#portofolio-selector {
  margin-top: 5vh;
}

.p-selector-container div {
  width: 100%;
  height: 900px!important;
  max-height: 60vh!important;
  display: block;
  height: 100%;
  background-size: cover;
  background-position: center;
  position: relative;
  background-color: #000;
  transition: all 0.5s;
  -webkit-transition:all 0.5s ;
  -o-transition:all 0.5s ;
  -moz-transition:all 0.5s ;
}

.p-selector-container h1 {
 position: absolute;
 bottom: 0;
 text-align: center;
 width: 100%;
 text-transform: uppercase;
 font-weight: bold;
 padding: 15px;
}

.p-selector-container {
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: block;
  position: relative;
}

.p-selector-container div:hover {
  transform: scale(1.1);
  opacity: 100%;
}

.p-selector-container div {
  opacity: 50%;
}

.p-selector-container:hover {
  opacity: 100%!important;
}

.portofolio-wrapper {
  margin-top: 30px!important;
  margin-left: 0px!important;
  margin-right: 0px!important;
  position: absolute!important;
  top: 0;
  left: 0;
  z-index: -9999;
  opacity: 0%;
}

.portofolio-wrapper.active {
  position: relative!important;
  z-index: 0;
  opacity: 100%;
  transition: opacity 2s ease;
  margin-right: calc(var(--bs-gutter-x) * -.5!important);
  margin-left: calc(var(--bs-gutter-x) * -.5)!important;
}

.modal-fullscreen .modal-body {
  background-color: #000000e8;
}

.gallery-item {
  display: block;
  max-width: 23vw;
}

.gallery-item img {
  width: 100%;
}

.row > * {
  padding: 0!important;
}

.portofolio-tab {
  list-style: none;
  margin: auto;
  padding: 0;
  display: block;
  text-align: center;
}
.portofolio-tab li {
  display: inline-block;
  margin: 5px;
}
.portofolio-tab li a {
  color: #5a5a5a!important;
  background-color: #fafafa;
  border-radius: 20px;
  padding: 5px 10px;
  min-width: 70px;
  display: block;
  text-align: center;
  font-weight: 400;
}

@media (max-width: 768px) {
  .portofolio-wrapper {
    overflow: scroll;
  }
}

